--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="mobile-web-app-capable" content="yes">
   </head>
   <body>
-    <canvas id="canvas" width="1000" height="600"></canvas>
+    <canvas id="canvas" width="600" height="350" style="border: 1px solid black;"></canvas>
     <script src="./dist/app.js"> </script>
     <script>
       window.onload = app;
