--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 	</script>
 	<script type="text/javascript" src="phaser.min.js"></script>
 	<script type="text/javascript" src="/eureca.js"></script>
+	<script type="text/javascript" src="src/StateFunctions.js"></script>
 	<script type="text/javascript" src="src/EventHandler.js"></script>
 <!--	<script type="text/javascript" src="src/WorldObject.js"></script> -->
 	<script type="text/javascript" src="src/PlayerController.js"></script>
