--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 	<script type="text/javascript" src="phaser.min.js"></script>
 	<script type="text/javascript" src="/eureca.js"></script>
 	<script type="text/javascript" src="src/EventHandler.js"></script>
+	<script type="text/javascript" src="src/StateFunctions.js"></script>
+	
 <!--	<script type="text/javascript" src="src/WorldObject.js"></script> -->
 <!--	<script type="text/javascript" src="src/State.js"></script> -->
 <!--	<script type="text/javascript" src="src/Player.js"></script> -->
