--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>ritu aali peli</title>
+    <title>Volcanico - FGJ2016 game</title>
 
     <meta name="mobile-web-app-capable" content="yes">
   </head>
   <body>
     <canvas id="canvas" width="600" height="350" style="border: 1px solid black;"></canvas>
+    <p>Music made by <a href="https://freesound.org/people/LittleRobotSoundFactory">LittleRobotSoundFactory</a></p>
     <script src="./dist/app.js"> </script>
     <script src="./js/SeamlessLoop.js"></script>
     <script>
